# GLverse

./: .gitignore  CMakeLists.txt  LICENSE  README.md
GLverse/: BaseText.h  BaseTextRendererGL2.h  CMakeLists.txt  FontRepository.cpp  FontRepository.h  LazyText.cpp  OpenGL.h  TrueTypeFont.cpp  TrueTypeFont.h
SimpleTextLayout/: BaseText.h  CMakeLists.txt  FontRepository.cpp  FontRepository.h  LazyText.cpp  LazyText.h  StaticText.cpp  StaticText.h  TexelVector.cpp  TexelVector.h  TrueTypeFont.cpp  TrueTypeFont.h  saturate_add
src/: GLFWRenderer.cpp  GLFWRenderer.h  main.cpp
